--- a/vizro-core/src/vizro/static/css/flex-grid.css
+++ b/vizro-core/src/vizro/static/css/flex-grid.css
@@ -44,3 +44,9 @@ as it may result in unexpected layouts.
 .flex-row .flex-item {
   flex: 1;
 }
+
+.container-fluid > .grid-layout {
+  flex: 1;
+  height: auto;
+  overflow: auto;
+}
